[tool.poetry]
name = "linear-algebra"
version = "0.1.0"
description = ""
authors = ["André"]
readme = "README.md"
packages = [{include = "linear_algebra"}]

[tool.poetry.dependencies]
python = "^3.10"
pynvim = "^0.4.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
